--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.5.1",
+    "@ant-design/pro-components": "2.8.1",
     "antd": "5.21.6",
     "axios": "^1.7.7",
+    "dayjs": "1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "5.3.0",
     "react-router-dom": "6.27.0",
     "react-spinners": "0.14.1",
-    "sass": "1.80.4"
+    "sass": "1.80.4",
+    "umi-request": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
