--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@ant-design/pro-components": "2.8.1",
     "antd": "5.21.6",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "dayjs": "1.11.13",
+    "exceljs": "4.4.0",
     "react": "^18.3.1",
+    "react-csv": "2.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "5.3.0",
     "react-router-dom": "6.27.0",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.11",
+    "@types/react-csv": "1.1.0",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
