--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "6.27.0",
     "react-spinners": "0.14.1",
     "sass": "1.80.4",
-    "umi-request": "^1.4.0"
+    "umi-request": "^1.4.0",
+    "uuid": "11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
